--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,9 @@
   },
   "homepage": "https://github.com/EvgenStb/20.05.23#readme",
   "dependencies": {
-    "chalk": "^4.1.2",
+    "express": "^4.18.2",
     "joi": "^17.9.2",
-    "yargs": "^17.7.2"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22"
   }
 }
